added the notification funtoinality and toggele theme funtoinality
